fitting content into article, preventing overflow

--- a/blocks/news-list/news-list.css
+++ b/blocks/news-list/news-list.css
@@ -173,7 +173,7 @@
 .news-container.list-view .article-content,
 .news-container.list-view .article-content > div,
 .news-container.list-view .article-content p {
-  max-width: none;
+  max-width: fit-content;
   width: 100%;
 }
 
